Import of MSCHILLI/Bot-WootOff-0.06 from CPAN.
gitpan-cpan-distribution: Bot-WootOff
gitpan-cpan-version:      0.06
gitpan-cpan-path:         MSCHILLI/Bot-WootOff-0.06.tar.gz
gitpan-cpan-author:       MSCHILLI
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ######################################################################
-    Bot::WootOff 0.05
+    Bot::WootOff 0.06
 ######################################################################
 
 NAME
@@ -65,6 +65,10 @@ DESCRIPTION
     Each message contains a link to woot.com, which will be displayed by IRC
     clients like Pidgin in a clickable format, so that you can reach the
     current offer with a single mouse click.
+
+    If someone in the channel says "!woot" then the bot will repeat its last
+    message. This is helpful if someone just joined the channel and wants to
+    know what the current item is.
 
     All you have to do to receive these message is use an IRC client like
     Pidgin, connect to the IRC server specified (irc.freenode.net by
