--- a/Changes
+++ b/Changes
@@ -1,6 +1,15 @@
 ######################################################################
 Revision history for Perl extension Bot::WootOff
 
+0.07  (2010/03/15)
+    (ms) Added -u option to specify woot happyhour URL or similar.
+    (ms) If the scraper fails, it now logs the HTML to /tmp/woot.html.
+    (ms) Since woot.com often suffers brief outages during a wootoff,
+         http_max_retries now sets 30 HTTP fetches of HTML we can't 
+         parse before we give up.
+    (ms) Added github repository link to Makefile.PL compatible with
+         MakeMaker<6.50
+
 0.06  2009/09/24
     (ms) Added LIVE_TESTS and eg/woot-scraper to detect woot.com 
          HTML changes early.
